force-app/main/default/objects/Survey_Question__c/fields/Active_Status__c.field-meta.xml
<CustomField>
    <fullName>Active_Status__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Active Status</label>
    <type>Checkbox</type>
</CustomField>