force-app/main/default/objects/Survey_Question__c/fields/Choice_Render_Type__c.field-meta.xml
<CustomField>
    <fullName>Choice_Render_Type__c</fullName>
    <label>Choice Render Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Choice Render Below</fullName>
            </value>
            <value>
                <fullName>Choice Render On Right</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>