force-app/main/default/objects/Survey_Question__c/fields/Parent_Question__c.field-meta.xml
<CustomField>
    <fullName>Parent_Question__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Question</label>
    <referenceTo>Survey_Question__c</referenceTo>
    <relationshipLabel>Survey Question</relationshipLabel>
    <relationshipName>Survey_Question</relationshipName>
    <type>Lookup</type>
</CustomField>