force-app/main/default/objects/Survey_Question__c/fields/Question_Grid_Size__c.field-meta.xml
<CustomField>
    <fullName>Question_Grid_Size__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Question Grid Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>