force-app/main/default/objects/Survey_Question__c/fields/Require_Input__c.field-meta.xml
<CustomField>
    <fullName>Require_Input__c</fullName>
    <label>Require Input</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Require</fullName>
            </value>
            <value>
                <fullName>Require One</fullName>
            </value>
            <value>
                <fullName>Require All</fullName>
            </value>
            <value>
                <fullName>Require All or None</fullName>
            </value>
            <value>
                <fullName>Require One or more</fullName>
            </value>
            <value>
                <fullName>Percentage</fullName>
            </value>
            <value>
                <fullName>Require One on Sub Question</fullName>
            </value>
            <value>
                <fullName>Require One or More on Sub Question</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>