force-app/main/default/objects/Survey_Question__c/fields/Score_Calculate_Type__c.field-meta.xml
<CustomField>
    <fullName>Score_Calculate_Type__c</fullName>
    <description>Use to clarify calculation method</description>
    <label>Score Calculate Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Min</fullName>
            </value>
            <value>
                <fullName>Sum</fullName>
            </value>
            <value>
                <fullName>Max</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>