force-app/main/default/objects/Survey_Question__c/fields/Survey_Version__c.field-meta.xml
<CustomField>
    <fullName>Survey_Version__c</fullName>
    <label>Survey Version</label>
    <referenceTo>Survey_Version__c</referenceTo>
    <relationshipLabel>Survey Question</relationshipLabel>
    <relationshipName>Survey_Question</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>