force-app/main/default/objects/Survey_Question__c/validationRules/SetGridSizeLessThan12.validationRule-meta.xml
<ValidationRule>
    <fullName>SetGridSizeLessThan12</fullName>
    <active>true</active>
    <description>Grid size should be less than 12</description>
    <errorConditionFormula>IF(OR(Question_Grid_Size__c &gt; 12,Question_Grid_Size__c &lt; 0)  , true, false)</errorConditionFormula>
    <errorDisplayField>Question_Grid_Size__c</errorDisplayField>
    <errorMessage>Question Grid Size must in 1-12</errorMessage>
</ValidationRule>